# pollution-data

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: EarthDataDownloader.ipynb  subset_M2TMNXAER_5.12.4_20260305_093255.txt
