[project]
name = "pollution-data"
version = "0.1.0"
description = "This is a basic juypter lab setup to run related scripts for this pollution project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.1.0",
    "cartopy>=0.25.0",
    "dask>=2026.1.2",
    "earthpy>=0.9.4",
    "geemap>=0.37.1",
    "geopandas>=1.1.2",
    "ics>=0.7.2",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "jupyterlab-code-formatter>=3.0.3",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "rasterio>=1.5.0",
    "regex>=2026.2.28",
    "requests>=2.32.5",
    "rioxarray>=0.21.0",
    "streamlit>=1.55.0",
    "whitebox>=2.3.6",
    "whitebox-workflows>=1.3.5",
    "xarray>=2025.11.0",
]
